# Schotten-Totten

./: .gitignore  Affichage_console.cpp  Affichage_console.h  Borne.cpp  Borne.h  CMakeLists.txt  Carte.cpp  Carte.h  Combinaison.cpp  Combinaison.h  Factory.cpp  Factory.h  Jeu.cpp  Jeu.h  Jeu_cartes.cpp  Jeu_cartes.h  Joueur.cpp  Joueur.h  Pioche.cpp  Pioche.h  README.md  Revendication.cpp  Revendication.h  Schotten_Totten.cpp  Schotten_Totten.h  defausse.cpp  defausse.h  main.cpp  menu.cpp  menu.h  set.cpp  set.h  vueajouterdefausse.cpp  vueajouterdefausse.h  vueborne.cpp  vueborne.h  vuecarte.cpp  vuecarte.h  vuedefausse.cpp  vuedefausse.h  (+6 more)
